--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tejado.Solar - Especialistas en Tejas Solares Integradas</title>
+    <title>Tejado.Solar - Especialistas en Tejados Solares Integradas</title>
     <!-- Material UI Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Google Fonts -->
@@ -133,7 +133,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(26, 54, 93, 0.85), rgba(26, 54, 93, 0.9)), url('https://images.unsplash.com/photo-1621506289937-a8e4df240d0b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
+            background: linear-gradient(rgba(26, 54, 93, 0.85), rgba(26, 54, 93, 0.7)), url('i1.png');
             background-size: cover;
             background-position: center;
             color: white;
@@ -961,8 +961,8 @@
     <!-- Hero Section -->
     <section class="hero" id="inicio">
         <div class="container">
-            <h1>La Revolución de las <span>Tejas Solares</span></h1>
-            <p>Integra la energía solar en tu hogar sin comprometer la estética. Nuestras tejas solares ofrecen máxima
+            <h1>La Revolución de los <span>Tejados Solares</span></h1>
+            <p>Integra la energía solar en tu hogar sin comprometer la estética. Nuestros Tejados solares ofrecen máxima
                 eficiencia con un diseño discreto y elegante.</p>
             <a href="#contacto" class="btn">Solicitar Presupuesto</a>
             <a href="#productos" class="btn btn-secondary">Ver Productos</a>
@@ -972,12 +972,12 @@
     <!-- Features Section -->
     <section class="features">
         <div class="container">
-            <h2 class="section-title">Tecnología Avanzada en Cada Teja</h2>
+            <h2 class="section-title">Tecnología Avanzada en Cada Tejado</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <i class="material-icons feature-icon">architecture</i>
                     <h3>Diseño Integrado</h3>
-                    <p>Reemplaza las tejas convencionales sin alterar la estética de tu tejado.</p>
+                    <p>Reemplaza los Tejados convencionales sin alterar la estética de tu tejado.</p>
                 </div>
                 <div class="feature-card">
                     <i class="material-icons feature-icon">bolt</i>
@@ -996,36 +996,42 @@
     <!-- Products Section -->
     <section class="products" id="productos">
         <div class="container">
-            <h2 class="section-title">Nuestras Tejas Solares</h2>
+            <h2 class="section-title">Nuestros Tejados Solares</h2>
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1592210454359-904b3ef8e8a6?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80')">
+                        style="background-image: url('i1.png')">
                     </div>
                     <div class="product-content">
-                        <h3>Teja Solar Clásica</h3>
-                        <p>Ideal para viviendas tradicionales, se integra perfectamente con tejas de barro o pizarra.
+                        <h3>Panel Solar Full Black </h3>
+                        <p>Ideal para viviendas tradicionales, se integra perfectamente con Tejados de barro o pizarra. 
+                            Incluye  inversores, baterias, cargador VE y sistema de monitorización para máxima eficiencia
                         </p>
                         <a href="#contacto" class="btn">Más Información</a>
                     </div>
                 </div>
                 <div class="product-card">
                     <div class="product-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1586023492125-27b2c045efd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80')">
+                        style="background-image: url('i3.png')">
                     </div>
                     <div class="product-content">
                         <h3>Teja Solar Planas</h3>
-                        <p>Perfecta para arquitectura contemporánea con líneas limpias y diseño minimalista.</p>
+                        <p>Perfecta para arquitectura contemporánea con líneas limpias y diseño minimalista.
+                            Incluye  inversores, baterias, cargador VE y sistema de monitorización para máxima eficiencia
+                            </p>
                         <a href="#contacto" class="btn">Más Información</a>
                     </div>
                 </div>
                 <div class="product-card">
                     <div class="product-image"
-                        style="background-image: url('https://images.unsplash.com/photo-1603712725038-e9334ae8f39f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80')">
+                        style="background-image: url('i4.png')">
                     </div>
                     <div class="product-content">
-                        <h3>Sistema Completo</h3>
-                        <p>Incluye tejas solares, inversores y sistema de monitorización para máxima eficiencia.</p>
+                        <h3>Vallado solar</h3>
+                        <p>
+                            Niestra energia no invasiva.
+                            Incluye  inversores, baterias, cargador VE y sistema de monitorización para máxima eficiencia
+                            </p>
                         <a href="#contacto" class="btn">Más Información</a>
                     </div>
                 </div>
@@ -1038,7 +1044,7 @@
         <div class="container">
             <div class="brochure-content">
                 <h2 class="section-title">Descarga Nuestro Folleto Informativo</h2>
-                <p>Obtén información detallada sobre nuestras tejas solares, especificaciones técnicas, casos de éxito y opciones de financiación.</p>
+                <p>Obtén información detallada sobre Nuestros Tejados solares, especificaciones técnicas, casos de éxito y opciones de financiación.</p>
                 <button id="open-brochure-modal" class="btn">Descargar Folleto Gratuito</button>
             </div>
         </div>
@@ -1047,7 +1053,7 @@
     <!-- Benefits Section -->
     <section class="benefits" id="beneficios">
         <div class="container">
-            <h2 class="section-title">Ventajas de las Tejas Solares</h2>
+            <h2 class="section-title">Ventajas de los Tejados Solares</h2>
             <div class="benefits-grid">
                 <div class="benefit-item">
                     <i class="material-icons benefit-icon">savings</i>
@@ -1091,7 +1097,7 @@
                 <div class="process-step">
                     <div class="step-number">3</div>
                     <h3>Instalación</h3>
-                    <p>Nuestro equipo instala las tejas solares con precisión y cuidado.</p>
+                    <p>Nuestro equipo instala los Tejados solares con precisión y cuidado.</p>
                 </div>
                 <div class="process-step">
                     <div class="step-number">4</div>
@@ -1188,7 +1194,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>Tejado.Solar</h3>
-                    <p>Especialistas en la instalación de tejas solares integradas para viviendas y negocios.
+                    <p>Especialistas en la instalación de Tejados solares integradas para viviendas y negocios.
                         Transformamos tu tejado en una fuente de energía limpia y eficiente.</p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
@@ -1234,7 +1240,7 @@
     </footer>
 
     <!-- NEW: WhatsApp Button -->
-    <a href="https://wa.me/600366211?text=Hola,%20me%20interesan%20las%20tejas%20solares%20de%20Tejado.Solar" class="whatsapp-button" target="_blank">
+    <a href="https://wa.me/600366211?text=Hola,%20me%20interesan%20las%20Tejados%20solares%20de%20Tejado.Solar" class="whatsapp-button" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
@@ -1257,7 +1263,7 @@
         <div class="modal-content">
             <span class="close-modal" id="close-modal">&times;</span>
             <h3>Descarga Nuestro Folleto</h3>
-            <p>Introduce tus datos para descargar nuestro folleto informativo completo sobre tejas solares.</p>
+            <p>Introduce tus datos para descargar nuestro folleto informativo completo sobre Tejados solares.</p>
             <form id="brochure-form">
                 <div class="form-group">
                     <label for="brochure-name">Nombre completo</label>
